added method random to experiments

--- a/experiments/methods.cnf
+++ b/experiments/methods.cnf
@@ -3,3 +3,4 @@ sanaec -method sana -objfuntype generic -topmeasure ec -ec 1
 sanas3 -method sana -objfuntype generic -topmeasure s3 -s3 1 -ec 0
 lgraal -method lgraal -objfuntype alpha -alpha 0
 hubalign -method hubalign -objfuntype alpha -alpha 0
+random -method random
