experiment outputs convenient csv file

--- a/topologySequenceScoreTable.cnf
+++ b/topologySequenceScoreTable.cnf
@@ -12,20 +12,20 @@ lgraal CElegans MMusculus 0.5 0.1
 lgraal CElegans AThaliana 0.5 0.1
 lgraal MMusculus DMelanogaster 0.5 0.1
 lgraal SCerevisiae HSapiens 0.5 0.1
-hubalign yeast human 0.5 0.1
-hubalign RNorvegicus SPombe 0.5 0.1
-hubalign RNorvegicus CElegans 0.5 0.1
-hubalign RNorvegicus MMusculus 0.5 0.1
-hubalign RNorvegicus AThaliana 0.5 0.1
-hubalign RNorvegicus DMelanogaster 0.5 0.1
-hubalign SPombe CElegans 0.5 0.1
-hubalign SPombe MMusculus 0.5 0.1
-hubalign SPombe AThaliana 0.5 0.1
-hubalign SPombe DMelanogaster 0.5 0.1
-hubalign CElegans MMusculus 0.5 0.1
-hubalign CElegans AThaliana 0.5 0.1
-hubalign MMusculus DMelanogaster 0.5 0.1
-hubalign SCerevisiae HSapiens 0.5 0.1
+hubalign yeast human 0.1 0.1
+hubalign RNorvegicus SPombe 0.1 0.1
+hubalign RNorvegicus CElegans 0.1 0.1
+hubalign RNorvegicus MMusculus 0.1 0.1
+hubalign RNorvegicus AThaliana 0.1 0.1
+hubalign RNorvegicus DMelanogaster 0.1 0.1
+hubalign SPombe CElegans 0.1 0.1
+hubalign SPombe MMusculus 0.1 0.1
+hubalign SPombe AThaliana 0.1 0.1
+hubalign SPombe DMelanogaster 0.1 0.1
+hubalign CElegans MMusculus 0.1 0.1
+hubalign CElegans AThaliana 0.1 0.1
+hubalign MMusculus DMelanogaster 0.1 0.1
+hubalign SCerevisiae HSapiens 0.1 0.1
 sanaec yeast human 0.5 0.1
 sanaec RNorvegicus SPombe 0.5 0.1
 sanaec RNorvegicus CElegans 0.5 0.1
@@ -68,3 +68,15 @@ sanawec CElegans MMusculus 0.5 0.1
 sanawec CElegans AThaliana 0.5 0.1
 sanawec MMusculus DMelanogaster 0.5 0.1
 sanawec SCerevisiae HSapiens 0.5 0.1
+random RNorvegicus CElegans 0.01 0.01
+random RNorvegicus MMusculus 0.01 0.01
+random RNorvegicus AThaliana 0.01 0.01
+random RNorvegicus DMelanogaster 0.01 0.01
+random SPombe CElegans 0.01 0.01
+random SPombe MMusculus 0.01 0.01
+random SPombe AThaliana 0.01 0.01
+random SPombe DMelanogaster 0.01 0.01
+random CElegans MMusculus 0.01 0.01
+random CElegans AThaliana 0.01 0.01
+random MMusculus DMelanogaster 0.01 0.01
+random SCerevisiae HSapiens 0.01 0.01
