changes to run the experiments for the paper

--- a/experiments/datasets.cnf
+++ b/experiments/datasets.cnf
@@ -17,5 +17,8 @@ SPombe AThaliana
 SPombe DMelanogaster
 CElegans MMusculus
 CElegans AThaliana
+CElegans DMelanogaster
+MMusculus AThaliana
 MMusculus DMelanogaster
+AThaliana DMelanogaster
 SCerevisiae HSapiens
