added run-time temp files to .gitignore. updated Arguments.txt
Former-commit-id: 5fd44ddb9a808af623f5bb9f4123f85cd44fcbcd

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ experiments/*/scripts/
 experiments/*/outs/
 experiments/*/results/
 
-
+.trash.*
 *.csv
 *.align
 *.phr
@@ -43,4 +43,11 @@ sana.out
 regression_test_baseline.txt
 run_output.txt
 
+wrappedAlgorithms/GEDEVO/GEDEVOtmp*
+wrappedAlgorithms/GHOST/GHOSTtmp*
+wrappedAlgorithms/MI-GRAAL/MIGRAALtmp*
+wrappedAlgorithms/MI-GRAAL/tmp*
+wrappedAlgorithms/NATALIE/NATALIEtmp*
+wrappedAlgorithms/NETAL/NETALtmp*
+wrappedAlgorithms/OptNetAlign/OPTNETALIGNtmp*
 
