Temporary code in HubAlign and LGRAAL wrappers to make temporary filenames. Code copied from WrappedMethod constructor. It can be deleted once these two inherit from WrappedMethod instead of Method.
Former-commit-id: d4ddc5ba86778197a8312dab667a431b99ca4626

--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,4 @@ sana.out
 regression_test_baseline.txt
 run_output.txt
 
-wrappedAlgorithms/GEDEVO/GEDEVOtmp*
-wrappedAlgorithms/GHOST/GHOSTtmp*
-wrappedAlgorithms/MI-GRAAL/MIGRAALtmp*
-wrappedAlgorithms/MI-GRAAL/tmp*
-wrappedAlgorithms/NATALIE/NATALIEtmp*
-wrappedAlgorithms/NETAL/NETALtmp*
-wrappedAlgorithms/OptNetAlign/OPTNETALIGNtmp*
-
+wrappedAlgorithms/*/*tmp*
