Adding canon_maps, (canon) lists and orbitids
Former-commit-id: 8f0196c1524e8a392c69c5ac561f3db2c18fa231

--- a/test/Graphette/Makefile
+++ b/test/Graphette/Makefile
@@ -7,11 +7,11 @@ INCLUDES =
 LFLAGS =
 LIBS =
 
-OTHER_SRC =                                         \
+OTHER_SRC =                                             \
 	src/HalfMatrix.cpp                                  \
 	src/Graphette.cpp                                   \
+	src/distanceMatrix.cpp                              \
 	src/test.cpp                                        \
-
 
 
 SRCS = $(OTHER_SRC)
