--- a/graphettes/multiprocess/Makefile
+++ b/graphettes/multiprocess/Makefile
@@ -19,7 +19,7 @@ OBJDIR = _objs
 OBJS = $(addprefix $(OBJDIR)/, $(SRCS:.cpp=.o))
 
 #MAIN = sana_dbg
-MAIN = main
+MAIN = graphette
 
 .PHONY: depend clean test test_all regression_test
 
