--- a/test/Graphette/Makefile
+++ b/test/Graphette/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 
 #CXXFLAGS = -Wall -fno-inline -O2 -std=c++11 -g
-CXXFLAGS = -U__STRICT_ANSI__ -Wall -std=c++11 -Og -g
+CXXFLAGS = -U__STRICT_ANSI__ -Wall -std=c++11 -O3 #-Og -g
 
 INCLUDES =
 LFLAGS =
@@ -31,6 +31,9 @@ all:    $(MAIN)
 
 $(MAIN): $(OBJS)
 	$(CC) $(CXXFLAGS) $(INCLUDES) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
+
+$(MAIN).static: $(OBJS)
+	$(CC) $(CXXFLAGS) -static $(INCLUDES) -o $(MAIN).static $(OBJS) $(LFLAGS) $(LIBS)
 
 #.c.o:
 #	$(CC) $(CXXFLAGS) $(INCLUDES) -c $<  -o $@
