adding more detailed timing info on output
Former-commit-id: 170165a19b4e6ee7cef5822aaa91d97ac7f121e2

--- a/test/Graphette/Makefile
+++ b/test/Graphette/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 
 #CXXFLAGS = -Wall -fno-inline -O2 -std=c++11 -g
-CXXFLAGS = -U__STRICT_ANSI__ -Wall -std=c++11 -O3 #-ggdb
+CXXFLAGS = -U__STRICT_ANSI__ -Wall -std=c++11 -O3 -ggdb
 
 INCLUDES =
 LFLAGS =
