Changing CMake version compatible with openlab

--- a/src/main-sana/CMakeLists.txt
+++ b/src/main-sana/CMakeLists.txt
@@ -2,10 +2,10 @@ set (Main-SRC
     main.cpp
 )
 
-add_executable(SANA ${Main-SRC})
+add_executable(sana ${Main-SRC})
 
-target_link_libraries(SANA 
+target_link_libraries(sana 
     lib-sana)
 
-install(TARGETS SANA DESTINATION bin)
+install(TARGETS sana DESTINATION bin)
 
