--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ wrappedAlgorithms/PISWAP/networkx/*.pyc
 wrappedAlgorithms/PISWAP/networkx/*/*.pyc
 wrappedAlgorithms/PISWAP/networkx/*/*/*.pyc
 
+Makefile
 sana.out
 *.localscores
 
