removed automatic swapping G1 and G2 if G1 is bigger

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,10 @@ cache-pbad/
 .vscode/
 sana\.weighted
 
+regression-tests/CompressedFiles/
+regression-test.result
+regression-out
+
 # Macbook files
 *.DS_Store
 src/*.DS_Store
