--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,39 +5,30 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  test:
+  test-ubuntu:
     machine:
       image: ubuntu-2004:202010-01
       
     steps:
       - checkout
-      
-      # - run:
-      #     name: "first stack check"
-      #     command: "ulimit -s"
-
-      # - run:
-      #     name: "set unlimited stack space"
-      #     command: "ulimit -s unlimited;ulimit -s"
-          
-      # - run:
-      #     name: "second stack check"
-      #     command: "ulimit -s"
-      
-      # - run:
-      #     name: "check g++ version"
-      #     command: "g++ -v"
-      # - run: 
-      #     name: "checkout libwayne"
-      #     command: "git submodule init libwayne && git submodule update libwayne && cd libwayne && git checkout master && git pull"
       - run:
           name: "run regression test"
           command: "./regression-test-all.sh -make"
 
+  test-MacOS-Intel:
+    macos:
+      xcode: "14.2.0"
+
+    steps:
+      - checkout
+      - run:
+          name: "run regression test"
+          command: "./regression-test-all.sh -make"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   test-workflow:
     jobs:
-      - test
+      - test-MacOS-Intel
+      - test-ubuntu
